# radon

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
notebooks/: hello_world.ipynb
src/: backward.cu  cfg.cu  forward.cu  log.cpp  noise.cu  pytorch.cpp  symbolic.cpp  texture.cu
src/python/torch_radon/: differentiable_functions.py  filtering.py  projection.py  radon.py  volumes.py
src/radon/: __init__.py  cuda_backend.py  differentiable_functions.py  radon.py
src/radon/cuda/: __init__.py  _cuda_add.pyi  _cuda_stub.pyi  _wrapper.py  add_arrays_bindings.cpp  add_arrays_kernel.cu  ext.cpp
src/radon/cuda/csrc/: add_arrays_kernel.cu  backprojection.cu  cache.cpp  forward.cu  texture.cu
src/radon/cuda/include/: cache.h  texture.h  utils.h
tests/: test_cuda_add.py
